force-app/main/default/objects/Chat_Verification__c/Chat_Verification__c.object-meta.xml
<CustomObject>
    <description>Ephemeral email OTP records for chat service-agent identity verification (Tier-2). Safe to purge expired rows.</description>
    <label>Chat Verification</label>
    <pluralLabel>Chat Verifications</pluralLabel>
    <nameField>
        <displayFormat>CV-{0000000}</displayFormat>
        <label>Verification #</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>