force-app/main/default/objects/Chat_Verification__c/fields/Code_Hash__c.field-meta.xml
<CustomField>
    <fullName>Code_Hash__c</fullName>
    <label>Code Hash</label>
    <type>Text</type>
    <length>128</length>
</CustomField>