force-app/main/default/objects/Chat_Verification__c/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <label>Conversation Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>