force-app/main/default/objects/Chat_Verification__c/fields/Verification_Token_Hash__c.field-meta.xml
<CustomField>
    <fullName>Verification_Token_Hash__c</fullName>
    <label>Verification Token Hash</label>
    <type>Text</type>
    <length>128</length>
</CustomField>