force-app/main/default/objects/Chat_Verification__c/fields/Verified_Until__c.field-meta.xml
<CustomField>
    <fullName>Verified_Until__c</fullName>
    <label>Verified Until</label>
    <type>DateTime</type>
</CustomField>